--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>TO-DO</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/underscore@1.8.3/underscore-min.js"></script>
+  
   </head>
   <body>
     <p class="header">TO-DO</p>
